--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,10 @@ repositories {
     mavenCentral()
 }
 
-properties {
-
-}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+    compile 'com.alibaba:druid-spring-boot-starter:1.1.17'
     runtimeOnly 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
