--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,27 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    password: postgres
-    username: postgres
-    url: jdbc:postgresql://127.0.0.1:5432/postgres
+      druid:
+        initial-size: 8
+        min-idle: 1
+        max-active: 20
+        max-wait: 60000
+        time-between-eviction-runsMillis: 60000
+        min-evictable-idle-timeMillis: 300000
+        validation-query: select * FROM travel_fly.user_info
+        test-while-idle: true
+        test-on-borrow: false
+        test-on-return: false
+        pool-prepared-statements: true
+        max-open-prepared-statements: 20
+        max-pool-prepared-statement-per-connection-size: 20
+        filters: stat
+        connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+        use-global-data-source-stat: true
+      driver-class-name: org.postgresql.Driver
+      password: postgres
+      username: postgres
+      url: jdbc:postgresql://127.0.0.1:5432/postgres
+      type: com.alibaba.druid.pool.DruidDataSource
 #  devtools:
 #    restart:
 #      enabled: false#mybatis
