--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     compile 'com.alibaba:druid-spring-boot-starter:1.1.17'
     runtimeOnly 'org.postgresql:postgresql'
@@ -21,6 +23,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     //Dependency name must be "pagehelper-spring-boot-starter" instead of "pagehelper".
     implementation group: 'com.github.pagehelper', name: 'pagehelper-spring-boot-starter', version: '1.2.5'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
