Connect to mysql and add docker file.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     compile 'com.alibaba:druid-spring-boot-starter:1.1.17'
-    runtimeOnly 'org.postgresql:postgresql'
+//    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     //Dependency name must be "pagehelper-spring-boot-starter" instead of "pagehelper".
