--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,10 +19,10 @@ spring:
         filters: stat
         connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
         use-global-data-source-stat: true
-      driver-class-name: org.postgresql.Driver
-      password: postgres
-      username: postgres
-      url: jdbc:postgresql://localhost:5432/postgres
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      password: zhao535226554504
+      username: admin
+      url: jdbc:mysql://database-1.cfpfie2tks4e.us-east-1.rds.amazonaws.com:3306/zhtdb
       type: com.alibaba.druid.pool.DruidDataSource
 #  devtools:
 #    restart:
